    + [BR] Factorize GFDL detection. Detect non official
      wordings of GFDL invariant section.  (Closes: #717916).
    + [BR] Add opentoken non official wording for GFDL
      invariant section, thanks to Nicolas Boulenguez.
      (Closes: #740183).
  * checks/menu-format.desc:
    + [NT] Apply patch from Charles Plessy to correct an URL
      in a tag reference.  (Closes: #738454)
  * checks/watch-file.{desc,pm}:
    + [BR] Allow debian/upstream-signing-key.asc,
      thanks to Nicolas Boulenguez (Closes: #736711).
    + [NT] Apply patch from Daniel Kahn Gillmor to check for
      the upstream signing key in debian/upstream.  Thanks to
      Hideki Yamane for the bug report.  (Closes: #738597)

  * collection/java-info:
    + [NT] Update the conditional using file(1) to cope with
      the new output for JAR files.

  * data:
    + [NT] Refresh several architecture data files against
      dpkg 1.17.5.  Thanks to James Hunt for the reminder.
      (Closes: #735266)
  * data/binary/embedded-libs:
    + [RG] Detect embedded copies of liblivemedia and libgadu.
  * data/cruft/non-free-files:
    + [BR] "id3v22-tda.mp3 considered non-free", thanks to Charlie
      Smotherman (Closes: #736203).
  * data/files/privacy*:
    + [BR] Improve detection of privacy-breach-google-cse, thanks to
      Paul Wise (Closes: #739247).
  * data/scripts/maintainer-script-bad-command:
    + [BR] Fix false positive
      maintainer-script-should-not-use-adduser-system-without-home
      due to quoting, thanks to Andreas Beckmann <anbe@debian.org>
      (Closes: #739109).

  * debian/tests/control:
    + [NT] Use the new @builddeps@ from autopkgtest/2.5.5
      instead of duplicating the values.

  * frontend/lintian:
    + [NT] Fix a regression in argument handling after the first
      non-option.  This problem was introduced in 2.5.18.

  * lib/Lintian/Util.pm:
    + [NT] Extend the "Continuation line outside a paragraph" parse